--- a/Firmware/LowLevel/platformio.ini
+++ b/Firmware/LowLevel/platformio.ini
@@ -39,6 +39,7 @@ board_build.f_cpu = 133000000L
 ; needed so that tinyusb is not added to dependency list (we don't want to use it.)
 lib_ldf_mode = off
 debug_build_flags = -O0 -g -ggdb
+build_flags = -DTILT_EMERGENCY_MILLIS=0 -DLIFT_EMERGENCY_MILLIS=500
 
 build_src_filter = +<*> -<.git/> -<.svn/> -<imu/*> -<soundsystem.cpp>
 
